* Fix word space wrap at header
git-svn-id: https://svn.code.sf.net/p/jezvemoney/code-0/branches/design@348 47cf728b-45b6-4a0a-a543-cdce7c6e2aab

--- a/css/common.css
+++ b/css/common.css
@@ -129,6 +129,7 @@ input[type="text"], input[type="password"], select
 /*	border: 1px solid red; */
 	line-height: 50px;
 	color: #FFFFFF;
+	white-space: nowrap;
 }
 
 
